add secondary sections to home page

--- a/index.html
+++ b/index.html
@@ -8,3 +8,42 @@ layout: default
     <h1 class="hero__welcome">We turn ideas into beautiful products</h1>
   </div>
 </div>
+<div class="section">
+  <div class="section__content">
+    <h2 class="section__title">
+      We’re a group of designers and makers ready for anything.
+    </h2>
+    <p class="section__text">
+      We work closely with you to understand your market and business goals, then create a team best suited to execute on your vision. From user stories to motion design, we are ready to tackle any design or development challenge needed.
+    </p>
+  </div>
+  <div class="section__image">
+    <img src="/assets/photo-cards.png" alt="This is us">
+  </div>
+</div>
+<div class="section">
+  <div class="section__image">
+      <img src="/assets/illustration.png" alt="Illustration">
+  </div>
+  <div class="section__content">
+    <h2 class="section__title">
+      We work with startups and Fortune 500 companies.
+    </h2>
+    <p class="section__text">
+        We have years of experience working for businesses of all sizes, from small founder teams eyeing the launch of an MVP, to household names looking to push into new customer sectors (we would share names, but legal told us not to).
+    </p>
+  </div>
+</div>
+<div class="section">
+    <div class="section__content">
+      <h2 class="section__title">
+        Our skillset is as deep as our burgers are big.
+      </h2>
+      <p class="section__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
+      </p>
+    </div>
+    <div class="section__image">
+        
+    </div>
+  </div>
