add team cards, photos, and "let's chat" section

--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@ layout: default
       We work closely with you to understand your market and business goals, then create a team best suited to execute on your vision. From user stories to motion design, we are ready to tackle any design or development challenge needed.
     </p>
   </div>
-  <div class="section__image">
-    <img src="/assets/photo-cards.png" alt="This is us">
+  <div class="section__image team-cards">
+    <div class="team-card" style="background-image: url(/assets/will-moyer.jpg); top: 210px;">
+      <h3 class="team-card__name">Will Moyer</h3>
+      <span class="team-card__tag">UX</span>
+      <span class="team-card__tag">UI</span>
+      <span class="team-card__tag">Motion Design</span>
+    </div>
+    <div class="team-card" style="background-image: url(/assets/rory-reiff.jpg);">
+      <h3 class="team-card__name">Rory Reiff</h3>
+      <span class="team-card__tag">UX</span>
+      <span class="team-card__tag">UI</span>
+      <span class="team-card__tag">MVP Strategies</span>
+    </div>
+    <div class="team-card" style="background-image: url(/assets/zoe.jpg);">
+      <h3 class="team-card__name">Zoe</h3>
+      <span class="team-card__tag">Head of Security</span>
+    </div>
   </div>
 </div>
 <div class="section">
@@ -35,15 +50,14 @@ layout: default
   </div>
 </div>
 <div class="section">
-    <div class="section__content">
-      <h2 class="section__title">
-        Our skillset is as deep as our burgers are big.
-      </h2>
-      <p class="section__text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
-      </p>
-    </div>
-    <div class="section__image">
-        
-    </div>
+  <div class="section__content">
+    <h2 class="section__title">
+     Let's chat.
+    </h2>
+    <p class="section__text">
+        Tell us about your business or idea. We’d love to see how we can help you take your business to the next level.
+    </p>
   </div>
+  <div class="section__image">
+  </div>
+</div>
