add styles for contact form input, textarea, button

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ layout: default
     </div>
     <div>
       <label for="message">Tell us about your idea or project</label>
-      <textarea class="field" id="message" name="message" rows=200></textarea>
+      <textarea class="field" id="message" name="message" rows=8></textarea>
     </div>
-    <input id="submit" name="submit" type="Submit" value="Send Message"/>
+    <input class="button" id="submit" name="submit" type="Submit" value="Send message"/>
   </form>
 </div>
