--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@ layout: default
   </ul>
 </div>
 
-<div class="hero">
+<div class="hero section">
   <h1 class="hero__welcome">We turn ideas into beautiful products</h1>
   <img src="/assets/hero-image.png" alt="phone image" class="hero__image">
 </div>
 
-<div class="about" id="about">
-    <h2 class="about__title">
+<div class="about section" id="about">
+    <h2 class="about__title section__title">
       We’re a group of designers and makers ready for anything.
     </h2>
-    <p class="about__text">
+    <p class="about__text section__text">
       We work closely with you to understand your market and business goals, then create a team best suited to execute on your vision. From user stories to motion design, we are ready to tackle any design or development challenge needed.
     </p>
 </div>
@@ -35,22 +35,22 @@ layout: default
   </div>
 </div>
 
-<div class="work">
-  <h2 class="work__title">
+<div class="work section">
+  <h2 class="work__title section__title">
     We work with startups, small businesses, and Fortune 500 companies.
   </h2>
-  <p class="work__text">
+  <p class="work__text section__text">
       We have years of experience working for businesses of all sizes, from small founder teams eyeing the launch of an MVP, to household names looking to push into new customer sectors (we would share names, but legal told us not to.)
   </p>
 </div>
 
-<div class="contact" id="contact">
+<div class="contact section" id="contact">
   
   <div class="contact__content">
-    <h2 class="contact__title">
+    <h2 class="contact__title section__title">
       Let's chat.
     </h2>
-    <p class="contact__text">
+    <p class="contact__text section__text">
       Tell us about your business or idea. We’d love to see how we can help you take your business to the next level.
     </p>
   </div>
