Add scroll arrow to desktop view

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: default
     <p class="about__text section__text">
       We work closely with you to understand your market and business goals, then create a team best suited to execute on your vision. From user stories to motion design, we are ready to tackle any design or development challenge needed.
     </p>
+    <div class="scroll-arrow bounce"></div>
 </div>
 
 <div class="team">
